--- a/index.html
+++ b/index.html
@@ -17,38 +17,61 @@
     <h1 class="heading">Heading</h1>
     <!-- Anchor, click to new page where user can create their own game -->
     <h2 id="create-own-game">Make your own game</h2>
-
+    <!-- Area enclosing all interactive parts of the game -->
     <div class="game-area">
-
+        <!-- Area encasing all interactive parts of the player -->
         <div class="player-1-area"></div>
-        <h2 class="player_heading">Player 1 heading</h2>
-            <div class="player-choices" id="player-1-choices">
-                <!-- Images will be reordered to match order of game title -->
-                <img class="player_choices_images" id="player_1_choice_00" src="" alt="">
-                <img class="player_choices_images" id="player_1_choice_01" src="" alt="">
-                <img class="player_choices_images" id="player_1_choice_02" src="" alt="">
-                <img class="player_choices_images" id="player_1_choice_03" src="" alt="">
-                <img class="player_choices_images" id="player_1_choice_04" src="" alt="">
-            </div>
-
-        <div class="player-2-area"></div>
-        <h2 class="player_heading" id="player_2_heading">Player 2 heading</h2>
-            <div class="player-choices" id="player-2-choices">
-                <!-- Images will be reordered to match order of game title -->
-                <img class="player_choices_images" id="player_2_choice_00" src="" alt="">
-                <img class="player_choices_images" id="player_2_choice_01" src="" alt="">
-                <img class="player_choices_images" id="player_2_choice_02" src="" alt="">
-                <img class="player_choices_images" id="player_2_choice_03" src="" alt="">
-                <img class="player_choices_images" id="player_2_choice_04" src="" alt="">
-            </div>
+        <h2 class="player-heading">Player 1 heading</h2>
+        <div class="player-choices" id="player-1-choices">
+            <!-- The disordered elements here are in theis order to be consistent both with their
+                    indices in the javascript as well as the game's title -->
+            <button class="player-choices-buttons" id="player-1-choice-04-button">
+                <img class="player-choices-images" id="player-1-choice-04-image" src="assets/images/rock.webp" alt="Rock image">
+            </button>
+            <button class="player-choices-buttons" id="player-1-choice-02-button">
+                <img class="player-choices-images" id="player-1-choice-02-image" src="assets/images/paper.webp" alt="Paper image">
+            </button>
+            <button class="player-choices-buttons" id="player-1-choice-00-button">
+                <img class="player-choices-images" id="player-1-choice-00-image" src="assets/images/scissor.webp"
+                    alt="Scissors image">
+            </button>
+            <button class="player-choices-buttons" id="player-1-choice-01-button">
+                <img class="player-choices-images" id="player-1-choice-01-image" src="assets/images/lizard.webp" alt="Lizard image">
+            </button>
+            <button class="player-choices-buttons" id="player-1-choice-03-button">
+                <img class="player-choices-images" id="player-1-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
+            </button>
+        </div>
+        <div class="computer-area"></div>
+        <h2 class="player-heading" id="computer-heading">Computer 2 heading</h2>
+        <div class="player-choices" id="computer-choices">
+            <!-- The disordered elements here are in theis order to be consistent both with their
+                    indices in the javascript as well as the game's title -->
+            <button class="player-choices-buttons" id="computer-choice-04-button">
+                <img class="player-choices-images" id="computer-choice-04-image" src="assets/images/rock.webp" alt="Rock image">
+            </button>
+            <button class="player-choices-buttons" id="computer-choice-02-button">
+                <img class="player-choices-images" id="computer-choice-02-image" src="assets/images/paper.webp" alt="Paper image">
+            </button>
+            <button class="player-choices-buttons" id="computer-choice-00-button">
+                <img class="player-choices-images" id="computer-choice-00-image" src="assets/images/scissor.webp"
+                    alt="Scissors image">
+            </button>
+            <button class="player-choices-buttons" id="computer-choice-01-button">
+                <img class="player-choices-images" id="computer-choice-01-image" src="assets/images/lizard.webp" alt="Lizard image">
+            </button>
+            <button class="player-choices-buttons" id="computer-choice-03-button">
+                <img class="player-choices-images" id="computer-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
+            </button>
+        </div>
         <div class="results-area"></div>
         <div>Player 1s choice</div>
-        <div>Player 2s choice</div>
+        <div>Computers choice</div>
         <div class="score-area"></div>
         <div>
             <h4>Score</h4>
-            <p class="scores">Player 1<span id="player_1_score"></span>0</p>
-            <p class="scores"><span id="player_2_name"><span id="player_2_score">0</span> </span> </p>
+            <p class="scores">Player 1<span id="player-1-score"></span>0</p>
+            <p class="scores"><span id="player-2-name"><span id="player-2-score">0</span> </span> </p>
         </div>
     </div>
 
