--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         <div class="player-choices" id="computer-choices">
             <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
-            <button class="player-choices-buttons" id="computer-choice-04-button">
+            <button disabled class="player-choices-buttons" id="computer-choice-04-button">
                 <img class="player-choices-images" id="computer-choice-04-image" src="assets/images/rock.webp" alt="Rock image">
             </button>
-            <button class="player-choices-buttons" id="computer-choice-02-button">
+            <button disabled class="player-choices-buttons" id="computer-choice-02-button">
                 <img class="player-choices-images" id="computer-choice-02-image" src="assets/images/paper.webp" alt="Paper image">
             </button>
-            <button class="player-choices-buttons" id="computer-choice-00-button">
+            <button disabled class="player-choices-buttons" id="computer-choice-00-button">
                 <img class="player-choices-images" id="computer-choice-00-image" src="assets/images/scissor.webp"
                     alt="Scissors image">
             </button>
-            <button class="player-choices-buttons" id="computer-choice-01-button">
+            <button disabled class="player-choices-buttons" id="computer-choice-01-button">
                 <img class="player-choices-images" id="computer-choice-01-image" src="assets/images/lizard.webp" alt="Lizard image">
             </button>
-            <button class="player-choices-buttons" id="computer-choice-03-button">
+            <button disabled class="player-choices-buttons" id="computer-choice-03-button">
                 <img class="player-choices-images" id="computer-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
             </button>
         </div>
