comments and slight changes to ideas.js to adapt to the structure of the webpage

--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
             </button>
         </div>
         <div class="results-area"></div>
-        <div>Player 1s choice</div>
+        <div>Player 1s choice
+            <span id="player-1-final-choice"></span>
+        </div>
         <div>Computers choice</div>
+            <span id="computer-final-choice"></span>
+        <div>
+            <span id="result">RESULT</span>
+        </div>
         <div class="score-area"></div>
         <div>
             <h4>Score</h4>
