--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
 <body>
-    <h1 class="heading">Heading</h1>
+    <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
     <!-- Anchor, click to new page where user can create their own game -->
     <h2 id="create-own-game">Make your own game</h2>
     <!-- Area enclosing all interactive parts of the game -->
     <div class="game-area">
         <!-- Area encasing all interactive parts of the player -->
-        <div class="player-1-area"></div>
-        <h2 class="player-heading">Player 1 heading</h2>
+        <div class="player-1-area">
+        <h2 class="player-heading">Player:</h2>
         <div class="player-choices" id="player-1-choices">
             <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
@@ -42,35 +42,15 @@
                 <img class="player-choices-images" id="player-1-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
             </button>
         </div>
-        <div class="computer-area"></div>
-        <h2 class="player-heading" id="computer-heading">Computer 2 heading</h2>
-        <div class="player-choices" id="computer-choices">
-            <!-- The disordered elements here are in theis order to be consistent both with their
-                    indices in the javascript as well as the game's title -->
-            <button disabled class="player-choices-buttons" id="computer-choice-04-button">
-                <img class="player-choices-images" id="computer-choice-04-image" src="assets/images/rock.webp" alt="Rock image">
-            </button>
-            <button disabled class="player-choices-buttons" id="computer-choice-02-button">
-                <img class="player-choices-images" id="computer-choice-02-image" src="assets/images/paper.webp" alt="Paper image">
-            </button>
-            <button disabled class="player-choices-buttons" id="computer-choice-00-button">
-                <img class="player-choices-images" id="computer-choice-00-image" src="assets/images/scissor.webp"
-                    alt="Scissors image">
-            </button>
-            <button disabled class="player-choices-buttons" id="computer-choice-01-button">
-                <img class="player-choices-images" id="computer-choice-01-image" src="assets/images/lizard.webp" alt="Lizard image">
-            </button>
-            <button disabled class="player-choices-buttons" id="computer-choice-03-button">
-                <img class="player-choices-images" id="computer-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
-            </button>
+        </div>
+        <div class="computer-area">
+        <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
+        <div id="computer-choice">
+            <img src="" alt="">
+        </div>
+        </div>
         </div>
         <div class="results-area"></div>
-        <div>Player 1s choice
-            <span id="player-1-final-choice"></span>
-        </div>
-        <div>Computers choice</div>
-            <span id="computer-final-choice"></span>
-        <div>
             <span id="result">RESULT</span>
         </div>
         <div class="score-area"></div>
@@ -79,8 +59,6 @@
             <p class="scores">Player 1<span id="player-1-score"></span>0</p>
             <p class="scores"><span id="player-2-name"><span id="player-2-score">0</span> </span> </p>
         </div>
-    </div>
-
     <script src="assets/js/script.js"></script>
 </body>
 
