--- a/index.html
+++ b/index.html
@@ -20,45 +20,50 @@
     <!-- Area enclosing all interactive parts of the game -->
     <div class="game-area">
         <!-- Area encasing all interactive parts of the player -->
-        <div class="player-1-area">
+        <div class="player-area" id="player-1-area">
         <h2 class="player-heading">Player:</h2>
         <div class="player-choices" id="player-1-choices">
             <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
-            <button class="player-choices-buttons" id="player-1-choice-04-button">
-                <img class="player-choices-images" id="player-1-choice-04-image" src="assets/images/rock.webp" alt="Rock image">
+            <button class="player-choices-buttons" id="player-1-choice-button-04">
+                <img class="player-choices-images" id="player-1-choice-image-04" src="assets/images/rock.webp" alt="Rock image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-02-button">
-                <img class="player-choices-images" id="player-1-choice-02-image" src="assets/images/paper.webp" alt="Paper image">
+            <button class="player-choices-buttons" id="player-1-choice-button-02">
+                <img class="player-choices-images" id="player-1-choice-image-02" src="assets/images/paper.webp" alt="Paper image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-00-button">
-                <img class="player-choices-images" id="player-1-choice-00-image" src="assets/images/scissor.webp"
+            <button class="player-choices-buttons" id="player-1-choice-button-00">
+                <img class="player-choices-images" id="player-1-choice-image-00" src="assets/images/scissor.webp"
                     alt="Scissors image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-01-button">
-                <img class="player-choices-images" id="player-1-choice-01-image" src="assets/images/lizard.webp" alt="Lizard image">
+            <button class="player-choices-buttons" id="player-1-choice-button-01">
+                <img class="player-choices-images" id="player-1-choice-image-01" src="assets/images/lizard.webp" alt="Lizard image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-03-button">
-                <img class="player-choices-images" id="player-1-choice-03-image" src="assets/images/spock.webp" alt="Spock image">
+            <button class="player-choices-buttons" id="player-1-choice-button-03">
+                <img class="player-choices-images" id="player-1-choice-image-03" src="assets/images/spock.webp" alt="Spock image">
             </button>
         </div>
         </div>
-        <div class="computer-area">
+        <div class="player-area" id="computer-area">
         <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
         <div id="computer-choice">
-            <img src="" alt="">
+            <!-- Button is disabled since the player doesn't choose the computers choice. Button is used to be able to style all buttons/images more generally -->
+            <button disable class="player-choices-buttons" id="player-1-choice-button-01">
+                <img class="player-choices-images" id="computer-choice-image" src="assets/images/question-mark.webp" alt="Computer choice. Not yet decided.">
+            </button>
+        </div>
+        <div class="results-area">
+        <span id="result">RESULT</span>
+        </div>
+        <div class="score-area">
+            <h3>Score</h3>
+            <div id="scoreboard"><p class="scores">Player 1:<span id="player-1-score">0</span>. -  
+                <span id="player-2-score">0</span><span id="player-2-name">Computer</span> </span> </p>
+            </div>
         </div>
         </div>
         </div>
-        <div class="results-area"></div>
-            <span id="result">RESULT</span>
         </div>
-        <div class="score-area"></div>
-        <div>
-            <h4>Score</h4>
-            <p class="scores">Player 1<span id="player-1-score"></span>0</p>
-            <p class="scores"><span id="player-2-name"><span id="player-2-score">0</span> </span> </p>
-        </div>
+        
     <script src="assets/js/script.js"></script>
 </body>
 
