more functionality added, button backgrounds removed. Image format changed to support transparent backgrounds

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <div class="player-choices" id="player-1-choices">
             <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
-            <button class="player-choices-buttons" id="player-1-choice-button-04">
-                <img class="player-choices-images" id="player-1-choice-image-04" src="assets/images/rock.webp" alt="Rock image">
+            <button class="player-choices-buttons" id="player-1-choice-button-4">
+                <img class="player-choices-images" id="player-1-choice-image-4" src="assets/images/rock.png" alt="Rock image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-02">
-                <img class="player-choices-images" id="player-1-choice-image-02" src="assets/images/paper.webp" alt="Paper image">
+            <button class="player-choices-buttons" id="player-1-choice-button-2">
+                <img class="player-choices-images" id="player-1-choice-image-2" src="assets/images/paper.png" alt="Paper image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-00">
-                <img class="player-choices-images" id="player-1-choice-image-00" src="assets/images/scissor.webp"
+            <button class="player-choices-buttons" id="player-1-choice-button-0">
+                <img class="player-choices-images" id="player-1-choice-image-0" src="assets/images/scissor.png"
                     alt="Scissors image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-01">
-                <img class="player-choices-images" id="player-1-choice-image-01" src="assets/images/lizard.webp" alt="Lizard image">
+            <button class="player-choices-buttons" id="player-1-choice-button-1">
+                <img class="player-choices-images" id="player-1-choice-image-1" src="assets/images/lizard.png" alt="Lizard image">
             </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-03">
-                <img class="player-choices-images" id="player-1-choice-image-03" src="assets/images/spock.webp" alt="Spock image">
+            <button class="player-choices-buttons" id="player-1-choice-button-3">
+                <img class="player-choices-images" id="player-1-choice-image-3" src="assets/images/spock.png" alt="Spock image">
             </button>
         </div>
         </div>
@@ -47,12 +47,12 @@
         <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
         <div id="computer-choice">
             <!-- Button is disabled since the player doesn't choose the computers choice. Button is used to be able to style all buttons/images more generally -->
-            <button disable class="player-choices-buttons" id="player-1-choice-button-01">
-                <img class="player-choices-images" id="computer-choice-image" src="assets/images/question-mark.webp" alt="Computer choice. Not yet decided.">
+            <button disabled class="player-choices-buttons" id="computer-choice-button">
+                <img class="player-choices-images" id="computer-choice-image" src="assets/images/question-mark.png" alt="Computer choice. Not yet decided.">
             </button>
         </div>
         <div class="results-area">
-        <span id="result">RESULT</span>
+        <span id="result"></span>
         </div>
         <div class="score-area">
             <h3>Score</h3>
