functionality almost done, just missing start screen, end of game/restart screen, and (possibly) code to make it a 2 player game

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img class="player-choices-images" id="player-1-choice-image-2" src="assets/images/paper.png" alt="Paper image">
             </button>
             <button class="player-choices-buttons" id="player-1-choice-button-0">
-                <img class="player-choices-images" id="player-1-choice-image-0" src="assets/images/scissor.png"
+                <img class="player-choices-images" id="player-1-choice-image-0" src="assets/images/scissors.png"
                     alt="Scissors image">
             </button>
             <button class="player-choices-buttons" id="player-1-choice-button-1">
@@ -56,14 +56,13 @@
         </div>
         <div class="score-area">
             <h3>Score</h3>
-            <div id="scoreboard"><p class="scores">Player 1:<span id="player-1-score">0</span>. -  
-                <span id="player-2-score">0</span><span id="player-2-name">Computer</span> </span> </p>
+            <div id="scoreboard"><p class="scores">Player 1:<span id="player-1-score"></span>   -   
+                <span id="computer-score"></span><span id="computer-name">Computer</span> </span> </p>
             </div>
         </div>
         </div>
         </div>
         </div>
-        
     <script src="assets/js/script.js"></script>
 </body>
 
