start game and game over popup boxes added. start of playing against a friend game added

--- a/index.html
+++ b/index.html
@@ -17,52 +17,69 @@
     <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
     <!-- Anchor, click to new page where user can create their own game -->
     <h2 id="create-own-game">Make your own game</h2>
-    <!-- Area enclosing all interactive parts of the game -->
-    <div class="game-area">
-        <!-- Area encasing all interactive parts of the player -->
-        <div class="player-area" id="player-1-area">
-        <h2 class="player-heading">Player:</h2>
-        <div class="player-choices" id="player-1-choices">
-            <!-- The disordered elements here are in theis order to be consistent both with their
+    <div class="game-container" id="game-container">
+        <!-- Area enclosing all interactive parts of the game -->
+        <div class="game-area">
+            <!-- Area encasing all interactive parts of the player -->
+            <div class="player-area" id="player-1-area">
+                <h2 class="player-heading">Player:</h2>
+                <div class="player-choices" id="player-1-choices">
+                    <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
-            <button class="player-choices-buttons" id="player-1-choice-button-4">
-                <img class="player-choices-images" id="player-1-choice-image-4" src="assets/images/rock.png" alt="Rock image">
-            </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-2">
-                <img class="player-choices-images" id="player-1-choice-image-2" src="assets/images/paper.png" alt="Paper image">
-            </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-0">
-                <img class="player-choices-images" id="player-1-choice-image-0" src="assets/images/scissors.png"
-                    alt="Scissors image">
-            </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-1">
-                <img class="player-choices-images" id="player-1-choice-image-1" src="assets/images/lizard.png" alt="Lizard image">
-            </button>
-            <button class="player-choices-buttons" id="player-1-choice-button-3">
-                <img class="player-choices-images" id="player-1-choice-image-3" src="assets/images/spock.png" alt="Spock image">
-            </button>
-        </div>
-        </div>
-        <div class="player-area" id="computer-area">
-        <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
-        <div id="computer-choice">
-            <!-- Button is disabled since the player doesn't choose the computers choice. Button is used to be able to style all buttons/images more generally -->
-            <button disabled class="player-choices-buttons" id="computer-choice-button">
-                <img class="player-choices-images" id="computer-choice-image" src="assets/images/question-mark.png" alt="Computer choice. Not yet decided.">
-            </button>
-        </div>
-        <div class="results-area">
-        <span id="result"></span>
-        </div>
-        <div class="score-area">
-            <h3>Score</h3>
-            <div id="scoreboard"><p class="scores">Player 1:<span id="player-1-score"></span>   -   
-                <span id="computer-score"></span><span id="computer-name">Computer</span> </span> </p>
+                    <button class="player-choices-buttons" id="player-1-choice-button-4">
+                        <img class="player-choices-images" id="player-1-choice-image-4" src="assets/images/rock.png"
+                            alt="Rock image">
+                    </button>
+                    <button class="player-choices-buttons" id="player-1-choice-button-2">
+                        <img class="player-choices-images" id="player-1-choice-image-2" src="assets/images/paper.png"
+                            alt="Paper image">
+                    </button>
+                    <button class="player-choices-buttons" id="player-1-choice-button-0">
+                        <img class="player-choices-images" id="player-1-choice-image-0" src="assets/images/scissors.png"
+                            alt="Scissors image">
+                    </button>
+                    <button class="player-choices-buttons" id="player-1-choice-button-1">
+                        <img class="player-choices-images" id="player-1-choice-image-1" src="assets/images/lizard.png"
+                            alt="Lizard image">
+                    </button>
+                    <button class="player-choices-buttons" id="player-1-choice-button-3">
+                        <img class="player-choices-images" id="player-1-choice-image-3" src="assets/images/spock.png"
+                            alt="Spock image">
+                    </button>
+                </div>
+            </div>
+            <div class="player-area" id="computer-area">
+                <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
+                <div id="computer-choice">
+                    <!-- Button is disabled since the player doesn't choose the computers choice. Button is used to be able to style all buttons/images more generally -->
+                    <button disabled class="player-choices-buttons" id="computer-choice-button">
+                        <img class="player-choices-images" id="computer-choice-image"
+                            src="assets/images/question-mark.png" alt="Computer choice. Not yet decided.">
+                    </button>
+                </div>
+                <div class="results-area">
+                    <span id="result"></span>
+                </div>
+                <div class="score-area">
+                    <h3>Score</h3>
+                    <div id="scoreboard">
+                        <p class="scores">Player 1:<span id="player-1-score"></span> -
+                            <span id="computer-score"></span><span id="computer-name">Computer</span> </span>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-        </div>
-        </div>
-        </div>
+    </div>
+    </div>
+    <div id="play-game-box" class="play-game-box">
+        <p>Play Game</p>
+    </div>
+    <div id="game-over-box" class="game-over-box" style="display: none;">
+        <p>Game over win or lose text here</p>
+        <button id="play-against-computer">Play against the computer</button>
+        <button id="play-against-friend">Play again a friend</button>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
