--- a/unused.html
+++ b/unused.html
@@ -23,3 +23,16 @@
             alt="Spock image">
     </button>
 </div>
+
+
+
+// Set size must be odd, i.e. 2n+1 for some int n. ORDER IS IMPORTANT. Element x defeats the following r elements in the
+set, where r is as defined further down. x loses to the preceeding r elements.
+// As long as the list is written correctly in this manner, then the game functions for any set of choices sized 2n+1
+
+// // Only begin the game if the game conditions are met
+// if (choices.length < 3) { // console.log("Invalid game. Number of choices must be at least 3."); // } else if
+    (choices.length % 2==0) { // console.log("Invalid game. Number of choices must be odd."); // } else { // Create set
+    of choices. ORDER IS IMPORTANT. // Example with extended 9-choices game // let choices=[ // "Scissors" ,
+    // "Spiderman" , // "Wizard" , // "Lizard" , // "Paper" , // "Glock" , // "Batman" , // "Spock" , // "Rock" // ] //
+    Old fashioned 3-choice game // let choices=[ // "Scissors" , // "Paper" , // "Rock" // ]
