Two palyer game functionality almost finished, just missing score screen, adjustment to scoreboard, game over screen and resetting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
     <!-- Anchor, click to new page where user can create their own game -->
     <!-- <h2 id="create-own-game">Make your own game</h2> -->
-    <div class="game-container" id="game-container1">
+    <div class="game-container" id="game-container">
         <!-- Area enclosing all interactive parts of the game -->
         <div class="game-area" id="game-area">
             <!-- Area encasing all interactive parts of the player -->
@@ -143,6 +143,9 @@
     <div id="player-2-make-choice" style="display: none;">
         <p>Player 2, make your choice.</p>
         <button id="player-2-make-choice-button" class="make-choice-button">Play</button>
+    </div>
+    <div style="display: none;" id="show-result">
+        <button is="show-result-button">Show result!</button>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
